Foi feita a correção do Id=entertainment

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam
                         tenetur error? Laborum, modi itaque. Sunt.
                     </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    <a href="sports" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
                     <img src="./imagens/futebol-americano.jpg"
@@ -64,7 +64,7 @@
                         labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam
                         tenetur error? Laborum, modi itaque. Sunt.
                     </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    <a href="#sports" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
                     <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
@@ -77,7 +77,7 @@
                         labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam
                         tenetur error? Laborum, modi itaque. Sunt.
                     </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    <a href="#sports" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
                     <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
@@ -90,7 +90,7 @@
                         labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam
                         tenetur error? Laborum, modi itaque. Sunt.
                     </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    <a href="#sports" title="Leia a notícia completa">Ler mais</a>
                 </article>
             </div>
         </div>
@@ -111,7 +111,7 @@
                         labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam
                         tenetur error? Laborum, modi itaque. Sunt.
                     </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    <a href="#economy" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
                     <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
@@ -124,7 +124,7 @@
                         labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam
                         tenetur error? Laborum, modi itaque. Sunt.
                     </p>
-                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    <a href="#economy" title="Leia a notícia completa">Ler mais</a>
                 </article>
                 <article>
                     <img src="./imagens/petroleo.jpg" alt="Extração de petróleo" />
